Bug 409376 - getScreenCTM testcase fails on reload. r+sr=bzbarsky,a1.9=beltzner